<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E8E8EE"
    tools:context="com.example.alyx.view.MainActivity">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/settingsForm"
        android:columnCount="3"
        android:rowCount="12"
        android:background="@android:color/white"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:paddingTop="25dp"
        android:paddingBottom="25dp"
        android:layout_weight="0.85">


        <TextView
            android:text="@string/lifeStoryLinesShow"
            android:id="@+id/serverPortText"
            android:gravity="left|top"
            android:textColor="#999990"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@drawable/underline"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:textSize="10sp" />



        <TextView
            android:text="@string/familyTreeLinesHeader"
            android:id="@+id/userNameText"
            android:textColor="#000000"
            android:gravity="left|center"
            android:paddingRight="10dp"
            android:layout_row="2"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:textSize="18sp" />


        <TextView
            android:text="@string/familyTreeLinesShow"
            android:id="@+id/passwordText"
            android:textColor="#999990"
            android:gravity="left|center"
            android:paddingRight="10dp"
            android:layout_row="3"
            android:layout_column="0"
            android:background="@drawable/underline"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:textSize="10sp" />


        <TextView
            android:id="@+id/firstNameText"
            android:layout_column="0"
            android:layout_columnWeight="3"
            android:layout_row="4"
            android:layout_rowWeight="1"
            android:gravity="left|bottom"
            android:paddingRight="10dp"
            android:text="@string/spouseLinesHeader"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/lastNameText"
            android:layout_column="0"
            android:layout_columnWeight="3"
            android:layout_row="5"
            android:layout_rowWeight="1"
            android:background="@drawable/underline"
            android:gravity="left|center"
            android:paddingRight="10dp"
            android:text="@string/spouseLinesShow"
            android:textColor="#999990"
            android:textSize="10sp" />

        <TextView
            android:text="@string/mapTypeHeader"
            android:id="@+id/emailText"
            android:textColor="#000000"
            android:gravity="left|center"
            android:paddingRight="10dp"
            android:layout_row="6"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:textSize="18sp" />


        <TextView
            android:text="@string/mapTypeBackgroundDisplay"
            android:id="@+id/genderText"
            android:textColor="#999990"
            android:gravity="left|top"
            android:paddingRight="10dp"
            android:layout_row="7"
            android:layout_column="0"
            android:background="@drawable/underline"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:textSize="10sp" />


        <TextView
            android:text="@string/resyncDataHeader"
            android:id="@+id/genderMessageText"
            android:textColor="#000000"
            android:gravity="left|center"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:layout_row="8"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:textSize="18sp" />


        <TextView
            android:text="@string/fromFMService"
            android:id="@+id/fromFMtext"
            android:textColor="#999990"
            android:gravity="left|top"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:layout_row="9"
            android:layout_column="0"
            android:background="@drawable/underline"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:textSize="10sp" />

        <TextView
            android:text="@string/logout"
            android:id="@+id/logoutText"
            android:textColor="#000000"
            android:gravity="left|center"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:layout_row="10"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:textSize="18sp" />

        <TextView
            android:text="@string/returnsToLoginScreen"
            android:id="@+id/returnstoLScreenText"
            android:textColor="#999990"
            android:gravity="left|top"
            android:paddingRight="20dp"
            android:paddingBottom="5dp"
            android:layout_row="11"
            android:layout_column="0"
            android:background="@drawable/underline"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:textSize="10sp" />




        <Switch
            android:id="@+id/lifeLinesSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/settingsForm"
            android:gravity="right|bottom"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="10dp"
            android:layout_row="0"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <Switch
            android:id="@+id/familyLinesSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/settingsForm"
            android:gravity="right|bottom"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="10dp"
            android:layout_row="2"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <Switch
            android:id="@+id/spouseLinesSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/settingsForm"
            android:gravity="right|bottom"
            android:layout_marginEnd="24dp"
            android:layout_marginRight="10dp"
            android:layout_row="4"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <TextView
            android:background="@drawable/underline"
            android:layout_row="1"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <TextView
            android:background="@drawable/underline"
            android:layout_row="3"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <TextView
            android:background="@drawable/underline"
            android:layout_row="5"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <TextView
            android:background="@drawable/underline"
            android:layout_row="7"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <TextView
            android:background="@drawable/underline"
            android:layout_row="9"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <TextView
            android:background="@drawable/underline"
            android:layout_row="11"
            android:layout_column="2"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <TextView
            android:background="@drawable/underline"
            android:layout_row="1"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <TextView
            android:background="@drawable/underline"
            android:layout_row="3"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <TextView
            android:background="@drawable/underline"
            android:layout_row="5"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <TextView
            android:background="@drawable/underline"
            android:layout_row="7"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <TextView
            android:background="@drawable/underline"
            android:layout_row="9"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>
        <TextView
            android:background="@drawable/underline"
            android:layout_row="11"
            android:layout_column="1"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"/>

        <TextView
            android:id="@+id/serverHostText"
            android:layout_column="0"
            android:layout_columnWeight="1"
            android:layout_row="0"
            android:layout_rowWeight="1"
            android:gravity="left|center"
            android:text="@string/lifeStoryLinesHeader"
            android:textColor="#000000"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/ddMenuLife"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_row="0"
            android:layout_rowWeight="1" />
        <Spinner
            android:id="@+id/ddMenuFam"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_row="2"
            android:layout_rowWeight="1" />
        <Spinner
            android:id="@+id/ddMenuSpouse"
            android:layout_column="1"
            android:layout_columnWeight="2"
            android:layout_row="4"
            android:layout_rowWeight="1" />
        <Spinner
            android:id="@+id/ddMenuMap"
            android:layout_column="2"
            android:layout_columnWeight="1"
            android:layout_row="6"
            android:layout_rowWeight="1" />

    </GridLayout>




</RelativeLayout>