<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="#E8E8EE">


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:id="@+id/settingsForm"
        android:columnCount="1"
        android:rowCount="6">

        <TextView
            android:text="@string/firstName"
            android:id="@+id/firstNameVariable"
            android:textColor="#000000"
            android:gravity="left|center"
            android:paddingRight="10dp"
            android:layout_row="0"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:textSize="18sp" />


        <TextView
            android:text="@string/firstName"
            android:id="@+id/firstNameText"
            android:textColor="#999990"
            android:gravity="left|center"
            android:paddingRight="10dp"
            android:layout_row="1"
            android:layout_column="0"
            android:background="@drawable/underline"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:textSize="10sp" />


        <TextView
            android:text="@string/lastName"
            android:id="@+id/lastNameVariable"
            android:layout_column="0"
            android:layout_columnWeight="3"
            android:layout_row="2"
            android:layout_rowWeight="1"
            android:gravity="left|bottom"
            android:paddingRight="10dp"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:text="@string/lastName"
            android:id="@+id/lastNameText"
            android:layout_column="0"
            android:layout_columnWeight="3"
            android:layout_row="3"
            android:layout_rowWeight="1"
            android:background="@drawable/underline"
            android:gravity="left|center"
            android:paddingRight="10dp"
            android:textColor="#999990"
            android:textSize="10sp" />

        <TextView
            android:text="@string/gender"
            android:id="@+id/genderVariable"
            android:textColor="#000000"
            android:gravity="left|center"
            android:paddingRight="10dp"
            android:layout_row="4"
            android:layout_column="0"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:textSize="18sp" />

        <TextView
            android:text="@string/gender"
            android:id="@+id/genderText"
            android:textColor="#999990"
            android:gravity="left|top"
            android:paddingRight="10dp"
            android:layout_row="5"
            android:layout_column="0"
            android:background="@drawable/underline"
            android:layout_rowWeight="1"
            android:layout_columnWeight="3"
            android:textSize="10sp" />





    </GridLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_margin="5dp"
        android:padding="20dp"
        android:orientation="vertical">
        <TextView
            android:text="Coming soon, life events"
            android:id="@+id/eventsPersonList"
            android:textColor="#000000"
            android:gravity="left|center"
            android:paddingRight="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="18sp" />

        <TextView
            android:text="Coming soon, related people"
            android:id="@+id/relationsPersonList"
            android:textColor="#000000"
            android:gravity="left|center"
            android:paddingRight="10dp"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:textSize="18sp" />
    </LinearLayout>

</LinearLayout>